--- a/deepexi-center-provider/pom.xml
+++ b/deepexi-center-provider/pom.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>deepexi-center-provider</artifactId>
     <packaging>jar</packaging>
 
     <parent>
-        <groupId>com.deepexi</groupId>
+        <groupId>com.deepxi</groupId>
         <artifactId>deepexi-center</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>com.deepexi</groupId>
+            <groupId>com.deepxi</groupId>
             <artifactId>deepexi-center-api</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -26,7 +26,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.1.1.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
