--- a/deepexi-center-provider/src/main/resources/application.properties
+++ b/deepexi-center-provider/src/main/resources/application.properties
@@ -5,17 +5,24 @@ spring.aop.proxy-target-class=true
 # 应用程序多环境支持: dev、stag、prod（对应文件 application-{profile}.properties设置）
 spring.profiles.active=dev
 
-server.port = 8088
-spring.application.name=deepexi-center
-
 # logback日志配置,日志环境类型，服务名，级别
 log.env.profile=dev
 log.env.module=deepexi-center
 log.env.logger.level=info
 
+#服务提供者的名字
+spring.application.name=deepexi-center
+
+#服务提供者的端口号
+server.port=8088
 
 #服务上下文配置，springboot 2.x推荐写法
 server.servlet.context-path=/deepexi-center
+
+#服务注册中心的地址
+#有用户名密码的验证方式
+#无需验证的方式： eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://admin:deepexi@localhost:8761/eureka/
 
 # mybatis-plus 配置
 mybatis-plus.mapper-locations=classpath*:**/mapper/*Mapper.xml
@@ -26,24 +33,19 @@ mybatis-plus.global-config.logic-not-delete-value=0
 #id自动生成策略
 mybatis-plus.global-config.db-config.id-type=uuid
 
+# apollo 配置中心配置
+app.id=deepexi-center
+# set apollo meta server address, adjust to actual address if necessary
+apollo.meta=http://localhost:8080
+# will inject 'application' namespace in bootstrap phase
+apollo.bootstrap.enabled = true
+# will inject 'application' and 'FX.apollo' namespaces in bootstrap phase
+apollo.bootstrap.namespaces =application
 
-# Service version
-demo.service.version = 1.0.0
+# sentinel 控制台地址
+# spring.cloud.sentinel.transport.dashboard=118.31.184.251:8089
 
-# Base packages to scan Dubbo Components (e.g @Service , @Reference)
-dubbo.scan.basePackages  = com.deepexi.pay.service.impl
-
-# Dubbo Config properties
-dubbo.application.id = deepexi-center
-dubbo.application.name = deepexi-center
-
-dubbo.protocol.id = dubbo
-dubbo.protocol.name = dubbo
-dubbo.protocol.port = 20880
-dubbo.provider.timeout = 5000
-
-# 自定义异常处理过滤器，要用-exception删除默认的过滤器
-dubbo.provider.filter=exceptionFilter,-exception
-
-dubbo.registry.id = my-registry
-dubbo.registry.address = zookeeper://127.0.0.1:2181
+# Actuator健康检测信息
+# http://localhost:8088/helloworld/actuator/health 地址访问
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
