--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 
     <parent>
         <groupId>com.deepexi</groupId>
-        <artifactId>dubbo-center-modules</artifactId>
+        <artifactId>springcloud-center-modules</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.deepexi</groupId>
+    <groupId>com.deepxi</groupId>
     <artifactId>deepexi-center</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -26,12 +26,4 @@
             <url>http://nexus.deepexi.top/repository/maven-public/</url>
         </repository>
     </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>deepexi-plugin-central</id>
-            <url>http://nexus.deepexi.top/repository/maven-public/</url>
-        </pluginRepository>
-    </pluginRepositories>
-
 </project>
